# nano-osrt-100m

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW_V4.md  LEARNINGS.md  LIGHTNING.md  OSRT_600M.md  OSRT_BUDGET_280.md  PLAN.md  README.md  RESEARCH.md  app.py  app_v4.py  demo.py  eval_model.py  perf_test.py  pyproject.toml  request_review.md  rope_bench.py  test_perf.py  test_plan.txt  test_redos.py  test_rep_pen.py  test_rep_penalty.py
.Jules/: palette.md
.claude/skills/hf-cli/: SKILL.md
.jules/: bolt.md  palette.md  sentinel.md
archive/: README.md
archive/v3/: app.py  app_v3_eval.py  demo.py  eval_model.py  export_model.py  inference.py  overview.md
archive/v3/scripts/: train.py
archive/v3/src/: data.py  grpo_config.py  hf_model.py  modal_train.py  model.py  recursive_model.py  sft_data.py  train.py
archive/v3/tests/: test_recursive_model.py
archive/v4/: app_v4.py
archive/v4/docs/: v4-architecture-plan.md
archive/v4/scripts/: transfer_checkpoints.py
archive/v4/src/: v4_config.py  v4_model.py  v4_moe_recover.py  v4_sft_train.py  v4_train.py  v4_train_config.py
archive/v4/tests/: test_v4_model.py
archive/v5/: ARCHITECTURE.md  LOCAL.md  MULTIMODAL.md  PLAN.md  README.md  TRAINING.md  UNSLOTH_API.md
archive/v5/src/nano_osrt/: config.py  data.py  hra.py  lm_eval_wrapper.py  model.py  muon.py  rewards.py  sft_data.py  (+5 more)
checkpoints/: .gitkeep
data/: .gitkeep
docs/: dataset-reference.md  training-report.md  v4-architecture-plan.md
review/: SYNTHESIS.md  agy-plan-reviewed.md  codex-plan-review.md
scripts/: __init__.py  collect_rollouts.py  collect_system_rollouts.py  train_tokenizer.py  transfer_checkpoints.py
src/nano_osrt/: __init__.py  config.py  data.py  grpo_config.py  grpo_train.py  hf_model.py  hra.py  lm_eval_wrapper.py  modal_config.py  modal_data.py  modal_train.py  model.py  recursive_model.py  rewards.py  rope.py  sft_config.py  sft_data.py  sft_train.py  train.py  train_config.py  train_main.py  v4_config.py  v4_data.py  v4_model.py  v4_sft_data.py  v4_sft_train.py  v4_train.py  v4_train_config.py
src_old/nano_osrt/: model.py  train_config.py
tests/: test_model.py  test_recursive_model.py  test_v4_model.py
