[project]
name = "nano-osrt-100m"
version = "0.1.0"
description = "A nano-scale (~100M parameter) Open-Set Reasoning Transformer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodeHalwell" }]

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "tensorboard>=2.16.0",
    "tiktoken>=0.6.0",
    "datasets>=2.18.0",
    "transformers>=4.39.0",
    "accelerate>=0.28.0",
    "modal>=1.3.5",
]

[project.scripts]
train = "scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_osrt"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]
