[project]
name = "nano-osrt"
version = "0.5.0"
description = "Recursive Mixtral-style MoE transformer (~363M physical params, ~192M active)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodeHalwell" }]

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "tensorboard>=2.16.0",
    "tiktoken>=0.6.0",
    "datasets>=2.18.0",
    "transformers>=4.39.0",
    "accelerate>=0.28.0",
    "modal>=1.3.5",
    "lm-eval>=0.4.11",
    "langdetect>=1.0.9",
    "immutabledict>=4.3.1",
    "gradio>=6.9.0",
    "wandb>=0.25.1",
    "pandas>=3.0.1",
    "lion-pytorch>=0.2.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_osrt"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]
